tests/lean/choice_expl.lean.expected.out
pr : Π {A}, A → A → A
pr a b : N
choice_expl.lean:14:6: error: ambiguous overload, possible interpretations
  N2.pr a b
  N1.pr a b
